[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://hud_controller" path="res://scripts/ui/HUDController.gd" id="1_script"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 24.0
grow_horizontal = 2

[node name="EssenceLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Essence: 100"

[node name="Spacer1" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CorruptionLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Corruption: 0%"

[node name="Spacer2" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ThreatLabel" type="Label" parent="TopBar"]
layout_mode = 2
text = "Threat: None"

[node name="Spacer3" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WorldButton" type="Button" parent="TopBar"]
layout_mode = 2
text = "View: Corrupted"

[node name="SidePanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -80.0
offset_top = 28.0
grow_horizontal = 0
grow_vertical = 2

[node name="MinionHeader" type="Label" parent="SidePanel"]
layout_mode = 2
text = "Minions"

[node name="CrawlerCount" type="Label" parent="SidePanel"]
layout_mode = 2
text = "Crawler: 0"

[node name="BruteCount" type="Label" parent="SidePanel"]
layout_mode = 2
text = "Brute: 0"

[node name="StalkerCount" type="Label" parent="SidePanel"]
layout_mode = 2
text = "Stalker: 0"

[node name="ContextPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -80.0
grow_horizontal = 0
grow_vertical = 0
